--- a/CarWorkshop.MVC/appsettings.json
+++ b/CarWorkshop.MVC/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CarWorkshopDbConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CarWorkshopDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
+
 }
