--- a/CarWorkshop.MVC/appsettings.Development.json
+++ b/CarWorkshop.MVC/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CarWorkshopDbConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CarWorkshopDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
